--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,3 +2,35 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+
+button.slick-next {
+    right: 80px;
+    z-index: 10;
+}
+button.slick-prev {
+    left: 20px;
+    z-index: 10;
+}
+
+button.slick-next::before {
+    color: red;
+    content: '\203A';
+    background-color: #ffd3d3;
+    width: 80px;
+    height: 80px;
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+button.slick-prev::before {
+    color: red;
+    content: '\2039';
+    background-color: #ffd3d3;
+    width: 80px;
+    height: 80px;
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
