filter sort product

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -35,7 +35,6 @@ button.slick-prev::before {
     align-items: center;
 }
 
-
 .image-slider button.slick-next {
     right: 45px;
     z-index: 10;
@@ -68,6 +67,33 @@ button.slick-prev::before {
     align-items: center;
 }
 
-.image-slider .slick-prev, .image-slider .slick-next {
+.image-slider .slick-prev,
+.image-slider .slick-next {
     height: 40px;
+}
+
+
+
+
+
+.my-masonry-grid {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: -30px; 
+    width: auto;
+}
+.my-masonry-grid_column {
+    padding-left: 30px;
+    background-clip: padding-box;
+}
+
+/* Style your items */
+.my-masonry-grid_column > div {
+    margin: 30px 0;
+    border: 1px solid #ccc;
+}
+
+.my-masonry-grid_column > div > a {
+    border: none;
 }
